# swarm-anchor

./: README.md  pyproject.toml
swarm_anchor/: __init__.py  cli.py  core.py
tests/: test_swarm.py
