[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-anchor"
version = "0.1.0"
description = "File-based shared state for multi-agent swarms. Light, fast, zero coordination."
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "SuperInstance" }]
keywords = ["swarm", "multi-agent", "shared-state", "anchor", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.scripts]
swarm-anchor = "swarm_anchor.cli:main"

[tool.setuptools]
packages = ["swarm_anchor"]
